--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
     "no-console": "off",
     "class-methods-use-this": "off",
     "max-len": ["error", { "code": 120 }],
-    "import/extensions": ["error", "ignorePackages"],
+    "import/extensions": ["error", "always", { "ignorePackages": true }],
     "linebreak-style": ["error", "windows"],
     "no-plusplus": "off",
     "prefer-template": "off",
@@ -23,6 +23,8 @@
     "function-paren-newline": "off",
     "indent": ["error", 2, { "SwitchCase": 1 }],
     "no-multi-spaces": "off",
-    "eol-last": ["error", "always"]
-  }
+    "eol-last": ["error", "always"],
+    "comma-dangle": ["error", "always-multiline"]
+  },
+  "ignorePatterns": ["dist/", "coverage/", "*.bundle.js"]
 }
